<resources>
    <string name="app_name">Online Kółko i Krzyżyk</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Register</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="title">Tic Tac Toe</string>
    <string name="enter_code_hint">Game code</string>
    <string name="start_game">Start new game</string>
    <string name="logout">Logout</string>
    <string name="join_existing_game">Join existing game</string>
</resources>