<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.firetactoe.MainActivity">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/colorAccent"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginBottom="40dp"
            tools:fontFamily="sans-serif-smallcaps" />
        <EditText
            android:id="@+id/input_game_code"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_code_hint"
            android:inputType="number"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <Button
            android:id="@+id/join_game"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:onClick="joinGame"
            android:text="@string/join_existing_game"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/button3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:onClick="start3x3"
            android:text="@string/start_game"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/black" />



        <Button
            android:id="@+id/button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:onClick="logout"
            android:text="@string/logout"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>